...
                                        <rect key="frame" x="0.0" y="84" width="343" height="84"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j23-zm-PBs">
                                                <rect key="frame" x="8" y="8" width="327" height="68"/>
                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                <fontDescription key="fontDescription" name="Zapfino" family="Zapfino" pointSize="20"/>
                                                <state key="normal" title="Generate" backgroundImage="Button">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                </state>
                                                <connections>
                                                    <action selector="genaratePressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VV3-oe-UQX"/>
                                                </connections>
                                            </button>
...
                                                <rect key="frame" x="0.0" y="0.0" width="171.5" height="84"/>
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6su-1U-KWE">
                                                        <rect key="frame" x="8" y="8" width="156" height="68"/>
                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                        <fontDescription key="fontDescription" name="Zapfino" family="Zapfino" pointSize="20"/>
                                                        <state key="normal" title="Lorem" backgroundImage="Button">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                        </state>
                                                    </button>
                                                </subviews>
                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                <constraints>
...
                                                <rect key="frame" x="171.5" y="0.0" width="171.5" height="84"/>
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yhO-A3-mdn">
                                                        <rect key="frame" x="8" y="8" width="155" height="68"/>
                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                        <fontDescription key="fontDescription" name="Zapfino" family="Zapfino" pointSize="20"/>
                                                        <state key="normal" title="Ipsum" backgroundImage="Button">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                        </state>
                                                    </button>
                                                </subviews>
                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                <constraints>
...
